Research Skills updates

--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -50,10 +50,6 @@ Germany
 \end{fullwidth}
 
 
-\section*{Preface}
-
-Lecture notes for the MSc course "Research Skills". Work in progress.
-
 
 \section*{Acknowledgments}
 
@@ -62,7 +58,7 @@ Severin Hauenstein for contributions to the chapter on scientific writing.
 
 \vfill
 \begin{fullwidth}
-Created 2015. 
+Created 2015. This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
 \end{fullwidth}
 
 
@@ -536,40 +532,34 @@ and adjust your words, level of detail and complexity, and jokes accordingly. A 
 \paragraph{Jargon} To reach the goals outlined above, Jargon can be a good and a bad thing. It can make communication more efficient, but you have to be careful - this is only the case if you and the recipient have the same jargon. Jargon used in a wrong way is worse than no jargon.
 
 
-
-
-
-
 \section{Communication channels}
-
-
 
 \subsection{Books and articles}
 
 The most important form of scientific communication is arguably the written word, in form of books and articles. A longer description on how a scientific article is structured is given in the following chapter. 
 
-
 \subsection{Oral presentations}
 
-The probably second most important channel are presentations. That is, in the perception and attention of many people. Especially young scientists are very concerned with presentations, because they are often used to determine marks of projects and so on. But also for older scientists, presentations are crucial, for example in job interviews. It is therefore important to have some skill in this type of communication \citep[see, e.g. the tips of][]{Kelleher-Tenguidelineseffective-2011}. More material on poster presentations on our lab on oral presentation. 
+The probably second most important channel are presentations. That is, in the perception and attention of many people. Especially young scientists are very concerned with presentations, because they are often used to determine marks of projects and so on. But also for older scientists, presentations are crucial, for example in job interviews. It is therefore important to have some skill in this type of communication \citep[see, e.g. the tips of][]{Kelleher-Tenguidelineseffective-2011}. More material on poster presentations on our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/OralPresentation}{lab on oral presentation}. 
 
 Personally, though, I am not sure how important presentations still are in shaping scientific thinking. It seems to me that the scientific debate and thinking relies more strongly on written media, either journal articles, or nowadays blogs, discussion forums and so on. These media are able to reach a much wider audience than a typical conference talk that is visited by maybe 50 people that may see another 30 talks on the same day. All this is not to say that oral presentations are not important - they may be crucial for getting a job. I just think that once you have it, science is driven by different media. 
 
 \subsection{Poster presentation}
 
-A similar case are poster presentations - on many conferences, poster presentations are offered for participants that don't give a talk. Poster presentations are a great opportunity to meet people and start discussing about your work, but I don't think they rank nearly as high in terms of importance than journal articles. More material on poster presentations on our lab on posters. 
+A similar case are poster presentations - on many conferences, poster presentations are offered for participants that don't give a talk. Poster presentations are a great opportunity to meet people and start discussing about your work, but I don't think they rank nearly as high in terms of importance than journal articles. More material on poster presentations on our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/PosterPresentation}{lab on posters}. 
 
 
 \subsection{Blogs, social media, and such}
 
-Blogs, social media and similar outlets have become more important in recent years. A collection of things that are worth checking out is provided in our lab on social media.
+Blogs, social media and similar outlets have become more important in recent years. A collection of things that are worth checking out is provided in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/SocialMedia}{lab on social media}.
 
 
 
 \section{Arguments and logical fallacies}
 
-In his article ``Sounder thinking through clearer writing'', \citet{Woodford-Sounderthinkingthrough-1967} 
+In his article ``Sounder thinking through clearer writing'', \citet{Woodford-Sounderthinkingthrough-1967} cites jargon as one of the key contributors to inefficient communication. He goes further, however, stating that if you communicate without clarity, you will start thinking without clarity yourself, leading to a tendency to draw wrong conclusions. Hence, clear communication is important for you and for others.
 
+A similar case\marginnote{A \href{https://en.wikipedia.org/wiki/List_of_fallacies}{long list of logical fallacies} is provided on Wikipedia} are rhetorical tricks and logical fallacies. There is a long list of archetypical conclusion structures that sound right, but that are typically wrong. Examples of these are
 
 \begin{itemize}
 \item False dilemma - if we want everything to be completely correct, we can stop doing science!
@@ -577,8 +567,7 @@ In his article ``Sounder thinking through clearer writing'', \citet{Woodford-Sou
 \item Strawman - proving an argument wrong that is similar, but not identical to that of the opponent - A: Diversity can increase ecosystem function. B: my opponent suggests that     diversity increases human well-being. But this is clearly wrong. Imaging a world where we have no HIV virus. Now, if I introduce the virus, we have more diversity. But human well-being is clearly lower!
 \end{itemize}
 
-
-
+Getting to know these fallacies has many advantages: you will train your logical thinking in general. You will be able to spot these fallacies when used by others. And lastly, you will notice if you use them yourself, avoiding wrong conclusions and sloppy arguments. Therefore, I highly recommend looking at this material!
 
 \vspace{1cm}
 \begin{mdframed}
@@ -597,17 +586,16 @@ In his article ``Sounder thinking through clearer writing'', \citet{Woodford-Sou
 
 \chapter{Scientific writing}
 
-
-Writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. You can read some advice, but to become a skilled and effective writer requires a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Look critically over your own writing, and think about the things that you can improve. The rest of this section is intended to help you start this journey. 
+As already said in the previous chapter: writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. You can read some advice, but to become a skilled and effective writer requires a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Look critically over your own writing, and think about the things that you can improve. The rest of this section is intended to help you start this journey. 
 
 \section{Some basic writing advice}
 
-\paragraph{Start writing early}\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} Writing structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
+\paragraph{Start writing early}Writing\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
 
-\paragraph{Know your audience}\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} Who is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
+\paragraph{Know your audience}Who\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
 
 
-\paragraph{Know what you want to say, and make a selection}\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra). } Sounds trivial, but in my experience it isn't. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min the essential points of piece, and note the structure. If you fail with this, think again about your story. Also remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
+\paragraph{Know what you want to say, and make a selection!}Sounds\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra).} trivial, but in my experience it isn't. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min the essential points of piece, and note the structure. If you fail with this, think again about your story. Also remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
 
 \paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford-Sounderthinkingthrough-1967}.
 
@@ -622,37 +610,36 @@ Writing is an essential skill for an academic, as for many other professions. \m
 
 \section{Style}
 
+Style is personal, and there are many small aspects of style that we cannot cover in a short introduction. However, there are 4 basic properties of style that I find are nearly always missing in undergraduate writing, and then can improve the readability of your text dramatically. 
 
 \subsection{Sentence Structure}
+
+The first is sentence structure. A sentence has two particularly important positions - the  beginning and the end. These two positions have distinct functions \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}.
+
+\paragraph{The topic position} The beginning of a sentence provides us with the context. Typically, we also use it to connect to previous information.
+
+\paragraph{The stress position} The end of the situation provides us with important new information. If it is not clear from the context that we have a logical closure, it also raises the expectation that this new information will be further developed in what is to come. 
+
+Strictly keeping this old-new structure in sentences creates a logical thread, and makes your text easier to read. Reversely, if you bring new information at the beginning of a sentence, it is often hard to understand. An additional bonus of checking your sentence structure is that you are more likely to notice flaws in your logic. I close with a quote from Brian McGill:
+
 
 \begin{quote}
 The battle for good writing is won sentence by sentence! A good sentence is: short, has the subject and verb together, has an active verb, has the points of emphasis at the beginning and end, and moves the reader along from a familiar launch point at the start to the new information at the end. (Brian McGill, on the blog Dynamic Ecology)
 \end{quote}
 
 
-
 \subsection{Paragraph structure}
 
-A paragraph is a logical unit of text. 
-
-The first sentence provides the topic of the paragraph. The last sentence should, ideally, provide a closing 
-
-
-
-\href{http://www.economist.com/styleguide/introduction}{http://www.economist.com/styleguide/introduction}
-
-%\href{http://www.nature.com/authors/author_resources/how_write.html}{http://www.nature.com/authors/author_resources/how_write.html}
-
-
+A paragraph is supposed to be a logical unit of text. Again, the beginning of a paragraph provides the context. The difference to a sentence is that the new information should be in the middle of the paragraph. The end of a paragraph is reserved for conclusions (what have we learned in this paragraph). It may also bring up the connection to the next paragraph, e.g. by raising the necessity to look at a particular aspect in more detail. In your writing, make sure you paragraphs had a beginning and a conclusion, and that both are clearly standing out, also for a person that is only skimming the text - this is vastly effect for good writing. 
 
 \subsection{Logic}
+
+Your text should be logically flawless. Read again about fallacies. Read about the scientific method and induction. Be careful with the use of logical indicators such as "thus", "hence", "however" - is the implication of this indicators really supported by your argument? More hints in the later section on common mistakes.
 
 
 \subsection{Clarity}
 
-Keep it simple. \footnote{Mark Twain is famous for his effective writing. A tip from him: "As to the Adjective: when in doubt, strike it out."}
-
-
+The most important advice: Keep it simple.\footnote{Mark Twain is famous for his effective writing. A tip from him: "As to the Adjective: when in doubt, strike it out."} More hints in the later section on common mistakes.
 
 \section{The structure of a scientific article}   
 % general strucutre
@@ -732,43 +719,51 @@ change, as ...\\[0.3cm]
 \end{quote}
 
 \noindent\textbf{Introduction}\\
-Tropical forests provide a suitable habitat to a vast variety of species. According to XY (19XX) tropical forests make up fo x \% of the planet's biodiversity.\\
+Tropical forests\marginnote{Introduce the topic. Explain relevance. Remember intro should mirror the abstract, one sentence in the abstract = one paragraph intro} are some of the most species-rich ecosystems. According to XY (19XX) tropical forests make up fo x \% of the planet's biodiversity.\\
 ...
 
-Many ecologists have aimed at explaining this phenomena and a large number of hypotheses has been published in recent years (e.g. ABC, 19XX; D\&E, 20XX; FG, 20XX). However, not all of whom have made convincing arguments. To order the state of knowledge validation and comparison of the studies is desperately needed.\\
+The\marginnote{Introduce the problem (1-2 paragraphs)} reason for high diversity in the tropics is still widely debated. Historically, it was though [...]. More recently, however, the view has emerged that [...] (e.g. ABC, 19XX; D\&E, 20XX; FG, 20XX). Up to now, none of these theories has been tested to an extend that it could be excluded as a potential explanation for the high tropical biodiversity\\
 ...
 
-In this short note, we compare a set of pre-selected hypotheses published by ABC (19XX), D\&E (20XX), FG (20XX) and ... and present a validation of the used approaches. For the latter we used X data provided by XYZ (2014)\\
+While the hypotheses described earlier cannot be tested directly,\marginnote{Introduce your approach ... could also be, as here, by explaining a new option to address the problem} a possible route would be to conduct and indirect test via the method of ABC (19XX). This method has originally been developed for X, but it should be able to distinguish among Y and Z. To our knowledge, no such test has been performed yet.\marginnote{Demonstrate novelty}
+\\
+...
+
+We\marginnote{Approach, now more specific} therefore applied X to compare the the support for the main hypotheses published by ABC (19XX), D\&E (20XX), FG (20XX). For the latter we used X data provided by XYZ (2014). We first test X in order to find the difference in Y. As an alternative approach we choose to look at Z for the purpose of XY.\\
 ... 
 
-We first test X in order to find the difference in Y. As an alternative approach we choose to look at Z for the purpose of XY. Specifically we are interested in species Y. Furthermore, the validation of the hypotheses will provide information about ...\\
-...\\
-In the following we briefly outline the concepts of ... and present our validation approach.\\
-...
+We\marginnote{Questions at the end of the intro should mirror sections in the results and discussion in the conclusion.} ask the following questions:
+
+\begin{enumerate}
+\item Which of the three hypothesis receives most support from the data
+\item Question 2
+\item Question 3
+\end{enumerate}
 
 \noindent\textbf{Methods}\\
 
+This section is typically divided into
+
+\begin{enumerate}
+\item Study area
+\item Experimental procedure
+\item Statistical analysis
+\end{enumerate}
+
 \noindent\textbf{Results}\\
 
+The presentation of the results should follow the questions at the end of the introduction. If you had three questions, you would typically make three subsections.
+
 \noindent\textbf{Discussion}\\
-In this study, we used method X to test whether prevalence of A
-is associated to factor B. Our main result is that there is a
-significant correlation of B with A. This correlation, however, was
-only found when factor C was also present.
+In this study\marginnote{Summarize main conclusions}, we used method X to test whether prevalence of A is associated to factor B. Our main result is that there is a significant correlation of B with A. This correlation, however, was only found when factor C was also present.
 
-Our findings support earlier findings of (X, 2005) and (Y, 2002)
-who also found a positive correlation between A and B. The fact
-that this correlation was only present in samples under conditions
-C may also explain previous opposite results such as (ZZ,
-2006,2008), as neither of these previous studies controlled for C.
-The reason for this positive association and the fact that it is
-affected by C is still unknown. We speculate that mechanism R
-could be a reason for this. This idea is given further support by
-the observation that the correlation between A and B is affected
-by C. Such an effect would be expected if R is really the cause of
-this Correlation, as R is dependent on C (XAY, 1968).
+Our\marginnote{Discuss relation to other studies and scientific implications} findings support earlier findings of (X, 2005) and (Y, 2002) who also found a positive correlation between A and B. The fact that this correlation was only present in samples under conditions C may also explain previous opposite results such as (ZZ, 2006,2008), as neither of these previous studies controlled for C. The reason for this positive association and the fact that it is affected by C is still unknown. We speculate that mechanism R could be a reason for this. This idea is given further support by the observation that the correlation between A and B is affected by C. Such an effect would be expected if R is really the cause of this Correlation, as R is dependent on C (XAY, 1968).
 
+A\marginnote{Discuss limitations and scope of the conclusions (see external validity). Limitations is not everything that could also have been done.} limitation of our study is the geographical limitation of our data. As we could only retrieve data from the neotropics, but not from Africa or Asia, we can currently not say if our results will hold globally.
 
+A\marginnote{Limitations are often connected to ideas for further reasearch} further issue is the possibility that niche conservatism contributes to the observed signal. Currently, we lack sufficient genetic data to obtain high-resolution phylogenies that could be used to test for this effect. However, as these data become increasingly available, future studies should include phylogenetic information to exclude this possibility. 
+
+In conclusion\marginnote{End with conclusions and wider importance for science and society}, the results of our study supports the idea that X is the main mechanism for the high diversity in the tropics. This has important implications for global biodiversity conservation [...], as well as for our understanding of the maintenance of diversity.\marginnote{Some people end with further research here. I find this a bit weak and prefer to deal with this topic in the earlier paragraphs.}
 
 \section{A list of common writing problems}
 
@@ -837,9 +832,11 @@ In the following, I highlighted \uline{redundant words} and other problems
 \textbf{Repetition of central concepts in this chapter:} 
 
 \begin{itemize*}
-  \item You find literature through literature databases
-  \item Use a reference manager to organize your literature
-  \item Read the papers you cite, cite them correctly for what they say, and don't forget to mention all sources that you use!
+  \item A sentence starts with the context and ends with the new info
+  \item A paragraph starts with the topic, discusses the topics, and ends with a summary and connection to the next point
+  \item Write with clarity and logic
+  \item Follow the standard structure. No experiments!
+  \item Read through the list of common writing problems!
 \end{itemize*}
 
 \end{mdframed}
@@ -850,45 +847,39 @@ Up to now, we have covered the primary scientific process from deciding on a sci
 
 \section{Professional ethics and good scientific practice}
 
-The term "good scientific practice" encompass
+The term "good scientific practice" encompass the accepted rules and norms of the field. They structure around subjects such as 
 
-\citep{Forschungsgemeinschaft-RulesGoodScientific-2013}
+\begin{itemize}
+\item Honesty in data generation and the presentation of results (don't falsify data)
+\item Honesty in attribution (authorship, plagiarism, etc)
+\item Standards of professional work (data storage, lab notebook, ...)
+\item Contribution to the scientific society (share data, contribute to common goods such as reviewing)
+\end{itemize}
 
-\marginnote{The rules of the German Science Foundation (DFG) are available \href{http://www.dfg.de/en/research_funding/principles_dfg_funding/good_scientific_practice/}{here}. Other guidelines for good scientific practice are available \href{https://github.com/florianhartig/ResearchSkills/blob/master/Labs/AcademicSoftSkills/codesOfConduct.md}{here}}
-
-
-\subsection{Documentation}
-
-
-There is no clear legal rule about how long data, documentation and samples have to be stored, but most funding organizations require 
-
-
-
-\subsection{Honesty}
+Many\marginnote{The rules of the German Science Foundation (DFG) are available \href{http://www.dfg.de/en/research_funding/principles_dfg_funding/good_scientific_practice/}{here}. Other guidelines for good scientific practice are available \href{https://github.com/florianhartig/ResearchSkills/blob/master/Labs/AcademicSoftSkills/codesOfConduct.md}{here}}
+ universities, institutes, and funding organizations have explicit rules of good scientific practice \citet[e.g.][]{Forschungsgemeinschaft-RulesGoodScientific-2013}. The following paragraphs give a fast overview about the most important topics:
 
 
+\paragraph{Fabrication and falsification} You must not do this!
+
+\paragraph{Misrepresentation of results} You\marginnote{Misrepresentation would be knowingly using wrong statistics, or claiming something you haven't shown} must not do this either!
+
+\paragraph{Documentation and organization} There\marginnote{Simple things like having a good folder structure for each project help a lot. Have a look at our lab on \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization}{project organization}} is no clear legal rule about how long data, documentation and samples have to be stored, but most funding organizations recommend a 10yr period. Depending on the discipline, not having a lab notebook or storing your data would be considered something between a sloppy behavior and a sever and highly suspicious misconduct (many ecological researchers, for example, have very sloppy or no lab/field notebooks. In medical research, lab notebooks are taken extremely serious.)\marginnote{When working with code, specially collaboratively, there is no way around using a version control system. See our lap on version control \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl}{here}}
+
+\paragraph{Attribution and authorship} A common problem is also the attrition of work, i.e. authorship and plagiarism. You know you should not copy text from others (plagiarism). You also should not copy text from yourself and publish it again to appear to be more productive (self-plagiarism). Authorship is a difficult issue. More on that in the lecture. 
+
+%\section{Social aspects}
+
+%\subsection{Collaborations and teams}
+
+%\subsection{Conflicts}
+
+%\subsection{Intercultural issues}
 
 
-\marginnote{Simple things like having a good folder structure for each project help a lot. Have a look at our lab on \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/ProjectOrganization}{project organization}}
+%\section{Science as a career}
 
-
-\marginnote{When working with code, specially collaboratively, there is no way around using a version control system. See our lap on version control \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/VersionControl}{here}}
-
-
-\section{Social aspects}
-
-\subsection{Collaborations and teams}
-
-\subsection{Conflicts}
-
-\subsection{Intercultural issues}
-
-
-\section{Science as a career}
-
-
-
-\marginnote{Read the special feature in Nature on the \href{http://www.nature.com/news/specials/phdfuture/index.html}{future of the PhD}}
+%\marginnote{Read the special feature in Nature on the \href{http://www.nature.com/news/specials/phdfuture/index.html}{future of the PhD}}
 
 
 \vspace{1cm}
@@ -897,9 +888,7 @@ There is no clear legal rule about how long data, documentation and samples have
 \textbf{Repetition of central concepts in this chapter:} 
 
 \begin{itemize*}
-  \item You find literature through literature databases
-  \item Use a reference manager to organize your literature
-  \item Read the papers you cite, cite them correctly for what they say, and don't forget to mention all sources that you use!
+  \item Read and follow the rules of good scientific practice 
 \end{itemize*}
 
 \end{mdframed}
