added licence to scripts

--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -77,7 +77,7 @@ Germany
 
 \vfill
 \begin{fullwidth}
-Created 2014 by Paul Bauche based on the existing RS LaTeX exercise. Updates 2015 by Severin Hauenstein and Florian Hartig.
+Created 2014 by Paul Bauche based on the existing RS LaTeX exercise. Updates 2015 by Severin Hauenstein and Florian Hartig. This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
 \end{fullwidth}
 
 \tableofcontents
